--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -7,21 +7,37 @@
   <style>
     body {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20px;
+      padding: 20px;
       margin: 0;
-      padding: 0;
       background-color: #000;
-      font-family: Arial, sans-serif;
       color: white;
+      font-family: Arial, sans-serif;
     }
     canvas {
-      border: 2px solid white;
-      margin-top: 10px;
+      border: 2px solid #fff;
     }
     #ranking {
-      margin-top: 10px;
-      text-align: left;
+      width: 250px;
+    }
+    #ranking h2 {
+      margin-top: 0;
+    }
+    #footer {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      font-size: 24px;
+      color: #aaa;
+    }
+    #version {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      font-size: 14px;
+      color: #aaa;
     }
     #startScreen, #gameOverScreen {
       position: absolute;
@@ -29,30 +45,56 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.85);
+      background: rgba(0,0,0,0.8);
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      font-size: 36px;
-      z-index: 10;
+      color: white;
+      font-size: 48px;
+      text-align: center;
     }
     #startScreen.hidden, #gameOverScreen.hidden {
       display: none;
     }
-    button {
-      margin-top: 20px;
+    #startScreen button, #gameOverScreen button {
+      margin: 20px;
       padding: 10px 20px;
-      font-size: 20px;
+      font-size: 24px;
       cursor: pointer;
       background-color: white;
       color: black;
       border: none;
-      border-radius: 8px;
+      border-radius: 5px;
+    }
+    #startScreen button:hover, #gameOverScreen button:hover:not(:disabled) {
+      background-color: #ccc;
+    }
+    #saveRankingButton:disabled {
+      background-color: #888;
+      color: #ccc;
+      cursor: not-allowed;
+      opacity: 0.6;
+    }
+    #backButton {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 8px 16px;
+      font-size: 18px;
+      cursor: pointer;
+      background-color: white;
+      color: black;
+      border: none;
+      border-radius: 5px;
+      z-index: 1000;
+    }
+    #backButton:hover {
+      background-color: #ccc;
     }
     #immunityBar {
       position: absolute;
-      top: 10px;
+      top: 40px;
       left: 10px;
       width: 150px;
       height: 20px;
@@ -67,221 +109,288 @@
     #immunityFill.cooldown {
       background-color: gray;
     }
-    #version {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      font-size: 14px;
-      color: #aaa;
-    }
   </style>
 </head>
 <body>
-  <div id="startScreen">
-    <h1>Lazer Runner</h1>
-    <button id="playButton">Jogar</button>
-  </div>
-  <canvas id="gameCanvas" width="600" height="600"></canvas>
-  <div id="gameOverScreen" class="hidden">
-    <h2>Game Over</h2>
-    <p id="finalScore">Pontuação: 0</p>
-    <button id="restartButton">Reiniciar</button>
+  <button id="backButton" onclick="window.location.href='../CentralJogos.html'">Voltar</button>
+  <canvas id="gameCanvas" width="900" height="900"></canvas>
+  <div id="ranking">
+    <h2>Ranking</h2>
+    <ol id="rankingList"></ol>
   </div>
   <div id="immunityBar">
     <div id="immunityFill"></div>
   </div>
-  <div id="version">Versão 1.4</div>
+  <div id="startScreen">
+    <h1>LazerRunner</h1>
+    <button id="playButton">Play</button>
+  </div>
+  <div id="gameOverScreen" class="hidden">
+    <h1>Game Over</h1>
+    <p id="finalScore"></p>
+    <button id="restartButton">Restart</button>
+    <button id="saveRankingButton">Salvar no Ranking</button>
+  </div>
+  <div id="footer">
+    Mover: Setas ou WASD<br>
+    Imunidade: Barra de espaço<br>
+    Reiniciar: Enter
+  </div>
+  <div id="version">Versão 1.3</div>
 
   <script>
+    // Proteção básica
+    document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
+    document.addEventListener('keydown', e => {
+      if (e.key === 'F12' || e.keyCode === 123) {
+        e.preventDefault();
+        alert('Ferramentas de desenvolvedor desativadas.');
+      }
+    });
+
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
-
     const startScreen = document.getElementById('startScreen');
     const gameOverScreen = document.getElementById('gameOverScreen');
     const playButton = document.getElementById('playButton');
     const restartButton = document.getElementById('restartButton');
+    const saveRankingButton = document.getElementById('saveRankingButton');
     const finalScoreText = document.getElementById('finalScore');
-    const immunityFill = document.getElementById('immunityFill');
 
-    const boundary = { x: 50, y: 50, width: canvas.width - 100, height: canvas.height - 100 };
-    let gameStarted = false;
-    let gameOver = false;
-    let score = 0;
-
+    let gameStarted = false, scoreSaved = false;
+    const boundary = { x:70, y:70, width:canvas.width-140, height:canvas.height-140 };
     const player = {
-      x: canvas.width / 2,
-      y: canvas.height / 2,
-      radius: 15,
+      x: canvas.width/2,
+      y: canvas.height/2,
+      radius: 20,
       speed: 4,
       immune: false,
       energy: 100,
       energyCost: 2,
-      rechargeRate: 0.5,
-      trail: []
+      rechargeRate: 0.5
     };
-
-    const keys = {};
-    const bars = [];
-
-    document.addEventListener('keydown', e => {
-      keys[e.key] = true;
-      if (e.key === ' ' && !player.immune && player.energy >= 10) player.immune = true;
-    });
-    document.addEventListener('keyup', e => {
-      keys[e.key] = false;
-      if (e.key === ' ') player.immune = false;
-    });
-
-    playButton.onclick = () => {
-      startScreen.classList.add('hidden');
-      resetGame();
-      gameStarted = true;
-      requestAnimationFrame(gameLoop);
+    let bars = [], score = 0, gameOver = false;
+    let keys = {
+      ArrowUp:false, ArrowDown:false,
+      ArrowLeft:false, ArrowRight:false,
+      w:false, W:false, s:false, S:false,
+      a:false, A:false, d:false, D:false,
+      ' ':false, Enter:false
     };
+    let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
-    restartButton.onclick = () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-      requestAnimationFrame(gameLoop);
-    };
+    function saveRanking() {
+      try {
+        localStorage.setItem('rankings', JSON.stringify(rankings));
+      } catch {
+        alert('Erro ao salvar a pontuação.');
+      }
+    }
 
-    function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
-      player.energy = 100;
-      player.immune = false;
-      score = 0;
-      bars.length = 0;
-      player.trail.length = 0;
-      gameOver = false;
-      updateImmunityBar();
+    function updateRanking() {
+      const list = document.getElementById('rankingList');
+      list.innerHTML = '';
+      rankings.sort((a,b)=>b.score-a.score).slice(0,10).forEach(e => {
+        const li = document.createElement('li');
+        li.textContent = `${e.name} - ${e.score}`;
+        list.appendChild(li);
+      });
     }
 
     function updateImmunityBar() {
-      immunityFill.style.width = `${player.energy}%`;
-      immunityFill.className = player.immune ? '' : 'cooldown';
+      const fill = document.getElementById('immunityFill');
+      fill.style.width = `${player.energy}%`;
+      fill.className = player.immune ? '' : 'cooldown';
     }
 
-    function movePlayer() {
-      let dx = 0, dy = 0;
-      if (keys.ArrowUp || keys.w) dy--;
-      if (keys.ArrowDown || keys.s) dy++;
-      if (keys.ArrowLeft || keys.a) dx--;
-      if (keys.ArrowRight || keys.d) dx++;
-      if (dx || dy) {
-        const len = Math.hypot(dx, dy);
-        player.x += (dx / len) * player.speed;
-        player.y += (dy / len) * player.speed;
+    document.addEventListener('keydown', e => {
+      if (e.key in keys) {
+        keys[e.key] = true;
+        if (e.key === ' ' && !player.immune && player.energy >= 10) {
+          player.immune = true;
+        }
+        if (e.key === 'Enter' && gameOver) resetGame();
+      }
+    });
 
-        // limitar dentro dos limites
-        player.x = Math.max(boundary.x + player.radius, Math.min(boundary.x + boundary.width - player.radius, player.x));
-        player.y = Math.max(boundary.y + player.radius, Math.min(boundary.y + boundary.height - player.radius, player.y));
+    document.addEventListener('keyup', e => {
+      if (e.key in keys) {
+        keys[e.key] = false;
+        if (e.key === ' ') {
+          player.immune = false;
+        }
+      }
+    });
 
-        // adicionar rastro
-        player.trail.push({ x: player.x, y: player.y, alpha: 1 });
-        if (player.trail.length > 30) player.trail.shift();
+    playButton.addEventListener('click', () => { startScreen.classList.add('hidden'); gameStarted = true; resetGame(); });
+    restartButton.addEventListener('click', () => { gameOverScreen.classList.add('hidden'); resetGame(); });
+    saveRankingButton.addEventListener('click', () => {
+      if (scoreSaved) return;
+      const name = prompt('Digite seu nome:');
+      if (name && name.trim()) {
+        rankings.push({ name: name.trim(), score });
+        saveRanking();
+        updateRanking();
+        scoreSaved = true;
+        saveRankingButton.disabled = true;
+        saveRankingButton.textContent = 'Salvo';
+        alert('Pontuação salva!');
+      } else if (name !== null) {
+        alert('Nome inválido.');
+      }
+    });
+
+    function resetGame() {
+      player.x = canvas.width/2;
+      player.y = canvas.height/2;
+      player.immune = false;
+      player.energy = 100;
+      score = 0;
+      bars = [];
+      gameOver = false;
+      scoreSaved = false;
+      saveRankingButton.disabled = false;
+      saveRankingButton.textContent = 'Salvar no Ranking';
+      lastFrameTime = lastBarTime = 0;
+      gameOverScreen.classList.add('hidden');
+      updateImmunityBar();
+      requestAnimationFrame(gameLoop);
+    }
+
+    function createBar() {
+      const dir = Math.floor(Math.random()*4);
+      const thickness = 30;
+      const length = Math.random()*400 + 200;
+      const speed = 2 + Math.random()*1.8;
+      let bar;
+      switch(dir) {
+        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
+        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
+        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
+        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
+      }
+      bars.push(bar);
+    }
+
+    function movePlayer(dt) {
+      let dx=0, dy=0;
+      if (keys.ArrowUp||keys.w) dy--;
+      if (keys.ArrowDown||keys.s) dy++;
+      if (keys.ArrowLeft||keys.a) dx--;
+      if (keys.ArrowRight||keys.d) dx++;
+      if (dx||dy) {
+        const len = Math.hypot(dx,dy);
+        player.x += (dx/len)*player.speed;
+        player.y += (dy/len)*player.speed;
+        player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
+        player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
+      }
+    }
+
+    function moveBars(dt) {
+      bars.forEach(b => { b.x += b.dx * dt; b.y += b.dy * dt; });
+    }
+
+    function checkCollisions() {
+      if (player.immune) return;
+      for (const b of bars) {
+        if (player.x+player.radius > b.x && player.x-player.radius < b.x+b.width &&
+            player.y+player.radius > b.y && player.y-player.radius < b.y+b.height) {
+          gameOver = true;
+          break;
+        }
       }
     }
 
     function manageImmunity() {
       if (player.immune) {
         player.energy = Math.max(0, player.energy - player.energyCost);
-        if (player.energy <= 0) player.immune = false;
+        if (player.energy <= 0) {
+          player.immune = false;
+        }
       } else {
         player.energy = Math.min(100, player.energy + player.rechargeRate);
       }
       updateImmunityBar();
     }
 
-    function createBar() {
-      const dir = Math.floor(Math.random() * 4);
-      const thickness = 20;
-      const length = Math.random() * 200 + 150;
-      const speed = 2 + Math.random() * 2;
-      let bar;
-      switch (dir) {
-        case 0: bar = { x: -thickness, y: Math.random() * canvas.height, w: thickness, h: length, dx: speed, dy: 0 }; break;
-        case 1: bar = { x: canvas.width, y: Math.random() * canvas.height, w: thickness, h: length, dx: -speed, dy: 0 }; break;
-        case 2: bar = { x: Math.random() * canvas.width, y: -thickness, w: length, h: thickness, dx: 0, dy: speed }; break;
-        case 3: bar = { x: Math.random() * canvas.width, y: canvas.height, w: length, h: thickness, dx: 0, dy: -speed }; break;
-      }
-      bars.push(bar);
-    }
-
-    function moveBars() {
-      bars.forEach(b => {
-        b.x += b.dx;
-        b.y += b.dy;
-      });
-    }
-
-    function checkCollisions() {
-      if (player.immune) return;
-      for (const b of bars) {
-        if (player.x + player.radius > b.x &&
-            player.x - player.radius < b.x + b.w &&
-            player.y + player.radius > b.y &&
-            player.y - player.radius < b.y + b.h) {
-          gameOver = true;
-          gameOverScreen.classList.remove('hidden');
-          finalScoreText.textContent = `Pontuação: ${score}`;
-          break;
-        }
-      }
-    }
-
     function draw() {
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.3)';
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.2)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      // Área de jogo
+      if (!gameStarted) return;
+
       ctx.strokeStyle = 'white';
       ctx.lineWidth = 2;
       ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
 
-      // Rastro
-      player.trail.forEach(t => {
-        ctx.beginPath();
-        ctx.arc(t.x, t.y, player.radius, 0, Math.PI * 2);
-        ctx.fillStyle = `rgba(255,255,255,${t.alpha})`;
-        ctx.fill();
-        t.alpha -= 0.03;
-      });
-
-      // Jogador
       ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-      ctx.fillStyle = player.immune ? 'yellow' : 'white';
+      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
+      ctx.fillStyle = player.immune ? 'yellow' : player.energy < 10 ? '#444' : 'white';
       ctx.fill();
 
-      // Obstáculos
-      ctx.fillStyle = 'red';
-      bars.forEach(b => ctx.fillRect(b.x, b.y, b.w, b.h));
+      if (player.immune) {
+        ctx.beginPath();
+        ctx.arc(player.x, player.y, player.radius+10, 0, Math.PI*2);
+        ctx.strokeStyle = 'yellow';
+        ctx.lineWidth = 3;
+        ctx.stroke();
+      }
 
-      // Pontuação
+      ctx.fillStyle = 'red';
+      bars.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
+
       ctx.fillStyle = 'white';
-      ctx.font = '20px Arial';
-      ctx.fillText(`Pontuação: ${score}`, 10, 30);
+      ctx.font = '24px Arial';
+      ctx.textAlign = 'left';
+      ctx.fillText(`Pontuação: ${score}`, 10, 20);
+
+      if (gameOver) {
+        finalScoreText.textContent = `Pontuação Final: ${score}`;
+        gameOverScreen.classList.remove('hidden');
+      }
     }
 
-    let lastBarTime = 0;
-    function gameLoop(timestamp) {
-      if (gameOver || !gameStarted) return;
+    let lastFrameTime=0, lastBarTime=0;
+    function gameLoop(ts) {
+      if (!gameStarted || gameOver) {
+        draw();
+        return;
+      }
+      const dt = (ts - lastFrameTime) / 16.67;
+      lastFrameTime = ts;
 
-      movePlayer();
-      moveBars();
+      let barInterval, numBars;
+      if (score <= 10)       { barInterval = 4000; numBars = 2; }
+      else if (score <= 25)  { barInterval = 3000; numBars = 2; }
+      else if (score <= 35)  { barInterval = 4000; numBars = 3; }
+      else if (score <= 45)  { barInterval = 3800; numBars = 3; }
+      else if (score <= 55)  { barInterval = 4000; numBars = 4; }
+      else                   { barInterval = 3500; numBars = 3; }
+
+      if (ts - lastBarTime > barInterval) {
+        for (let i=0;i<numBars;i++) createBar();
+        lastBarTime = ts;
+        score++;
+      }
+
+      movePlayer(dt);
+      moveBars(dt);
       manageImmunity();
       checkCollisions();
       draw();
 
-      if (timestamp - lastBarTime > 2500) {
-        createBar();
-        lastBarTime = timestamp;
-        score++;
-      }
-
       requestAnimationFrame(gameLoop);
     }
+
+    updateRanking();
+    updateImmunityBar();
+    requestAnimationFrame(ts => {
+      lastFrameTime = ts;
+      lastBarTime = ts;
+      gameLoop(ts);
+    });
   </script>
 </body>
 </html>
+
